[package]
name = "alethia-reth-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []

[dependencies]
alethia-reth-chainspec = { path = "../chainspec", default-features = false }
alethia-reth-evm = { path = "../evm" }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-hardforks = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
reth-chainspec = { workspace = true }
reth-consensus = { workspace = true }
reth-consensus-common = { workspace = true }
reth-ethereum = { workspace = true }
reth-evm = { workspace = true }
reth-primitives-traits = { workspace = true }
tracing = { workspace = true }
