[package]
name = "alethia-reth-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["serde"]
local-payload-builder = ["dep:reth-engine-local"]
serde = [
    "dep:serde",
    "alloy-primitives/serde",
    "alloy-rpc-types-engine/serde",
    "alloy-rpc-types-eth/serde",
]

[dependencies]
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-rpc-types-engine = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-serde = { workspace = true }
alethia-reth-chainspec = { path = "../chainspec", default-features = false }
reth-revm = { workspace = true }
reth-engine-local = { workspace = true, optional = true }
reth-chainspec = { workspace = true }
reth-ethereum = { workspace = true }
reth-ethereum-engine-primitives = { workspace = true }
reth-payload-primitives = { workspace = true }
reth-engine-primitives = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-primitives = { workspace = true }
serde = { workspace = true, optional = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
alloy-consensus = { workspace = true }
reth-engine-local = { workspace = true }
